# Esercitazione_3_Eigen

./: .gitignore
Exercise0/: CMakeLists.txt  main.cpp
Exercise1/: CMakeLists.txt  README.md  main.cpp
Exercise2/: main.cpp
